--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,8 @@
   <title>NASApp</title>
 </head>
 <body>
-  <section id="container-grid" class="container-grid">
-    <!-- <figure class="img">
-        <img class="nasa-img" src="" alt="" />
-    </figure>
-    <section class="img-info">
-      <p class="title"></p>
-      <p class="copyright"></p>
-      <p class="explanation"></p>
-    </section> -->
-    
-    <button class="search-btn">Get NASA picture of the day</button>
+  <section id="container-grid" class="container-grid">    
+    <!-- <button class="search-btn">Get NASA picture of the day</button> -->
   </section>
   <script src="./config.js"></script>
   <script src="./index.js"></script>
